1.HomeScreen News Api implemented with pagination

--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="textColor">#0F0F0F</color>
     <color name="background">#FFFFFF</color>
+    <color name="lowGrey">#979797</color>
+    <color name="shimmer">#A1A1A1</color>
+    <color name="searchBar">#EDEDED</color>
 </resources>
