--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,30 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+    android:viewportWidth="150"
+    android:viewportHeight="150">
+  <group android:scaleX="0.58"
+      android:scaleY="0.58"
+      android:translateX="31.5"
+      android:translateY="31.5">>
+        
+      <path android:fillColor="#34A853" android:pathData="M104.3,89.4c0,1.4 -1.1,2.5 -2.5,2.5H48.3c-1.4,0 -2.5,-1.1 -2.5,-2.5V37c0,-1.4 1.1,-2.5 2.5,-2.5h53.5c1.4,0 2.5,1.1 2.5,2.5L104.3,89.4L104.3,89.4z"/>
+        
+      <path android:fillColor="#E53935" android:pathData="M58.7,87.8c-0.4,1.3 0.4,2.7 1.6,3.1l49.5,13.3c1.2,0.3 2.6,-0.5 2.9,-1.8l11.7,-43.5c0.4,-1.3 -0.4,-2.7 -1.6,-3.1L73.3,42.5c-1.2,-0.3 -2.6,0.5 -2.9,1.8L58.7,87.8z"/>
+        
+      <path android:fillColor="#FBBC04" android:pathData="M97.7,82.5c0.5,1.3 -0.1,2.7 -1.3,3.2l-52.2,19c-1.2,0.4 -2.6,-0.3 -3.1,-1.6L25.7,60.7c-0.5,-1.3 0.1,-2.7 1.3,-3.2l52.2,-19c1.2,-0.4 2.6,0.3 3.1,1.6L97.7,82.5z"/>
+        
+      <path android:fillAlpha="0.2" android:fillColor="#FFFFFF" android:pathData="M25.9,61.3c-0.5,-1.3 0.1,-2.7 1.3,-3.2l52.2,-19c1.2,-0.4 2.6,0.3 3,1.5l-0.2,-0.5c-0.5,-1.3 -1.9,-2 -3.1,-1.6L27,57.6c-1.2,0.4 -1.8,1.9 -1.3,3.2l15.4,42.3c0,0 0,0 0,0L25.9,61.3z" android:strokeAlpha="0.2"/>
+        
+      <path android:fillColor="#4285F4" android:pathData="M113.3,113c0,1.4 -1.1,2.5 -2.5,2.5H39.3c-1.4,0 -2.5,-1.1 -2.5,-2.5V59c0,-1.4 1.1,-2.5 2.5,-2.5h71.4c1.4,0 2.5,1.1 2.5,2.5V113z"/>
+        
+      <path android:fillColor="#FFFFFF" android:pathData="M99.6,77.8H78.2v-5.6h21.4c0.6,0 1.1,0.5 1.1,1.1v3.4C100.7,77.3 100.2,77.8 99.6,77.8z"/>
+        
+      <path android:fillColor="#FFFFFF" android:pathData="M99.6,99.2H78.2v-5.6h21.4c0.6,0 1.1,0.5 1.1,1.1v3.4C100.7,98.7 100.2,99.2 99.6,99.2z"/>
+        
+      <path android:fillColor="#FFFFFF" android:pathData="M103,88.5H78.2v-5.6H103c0.6,0 1.1,0.5 1.1,1.1v3.4C104.1,88 103.6,88.5 103,88.5z"/>
+        
+      <path android:fillColor="#FFFFFF" android:pathData="M59.1,83.4v5.1h7.3c-0.6,3.1 -3.3,5.3 -7.3,5.3c-4.4,0 -8,-3.7 -8,-8.2c0,-4.4 3.6,-8.2 8,-8.2c2,0 3.8,0.7 5.2,2v0l3.9,-3.9c-2.3,-2.2 -5.4,-3.5 -9,-3.5c-7.5,0 -13.5,6 -13.5,13.5c0,7.5 6,13.5 13.5,13.5C66.9,99.2 72,93.7 72,86c0,-0.9 -0.1,-1.7 -0.2,-2.6H59.1z"/>
+      
+  </group>
 </vector>
